fix horizontal scrolling issue

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -14,7 +14,8 @@
 html,
 body {
   height: 100%;
-  margin: 0
+  margin: 0;
+  overflow-x: hidden;
 }
 
 .routed-content {
